# pysisense

./: .claudeignore  .cursorignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  NOTICE  README.md  config.yaml.example  pyproject.toml
.cursor/rules/: api-init-patterns.mdc  contributing.mdc  datamodel-conventions.mdc  docs-maintenance.mdc  migration-patterns.mdc  patch-safety.mdc  project-overview.mdc  pydantic-patterns.mdc  python-conventions.mdc  testing-conventions.mdc  wellcheck-return-structure.mdc
.github/workflows/: CODEOWNERS  ci.yml  ci.yml   python-publish.yml  release.yml
docs/: access_management.md  custom_code.md  dashboard.md  datamodel.md  encryption.md  folder.md  index.md  mergetool.md  metadata.md  migration.md  queries.md  sisenseclient.md  utils.md  wellcheck.md
examples/: access_management_example.md  blox_example.md  custom_code_example.md  dashboard_example.md  datamodel_example.md  encryption_example.md  folder_example.md  mergetool_example.md  metadata_example.md  migration_example.md  plugins_example.md  queries_example.md  source.yaml  target.yaml  wellcheck_example.md
pysisense/: __init__.py  access_management.py  dashboard.py  datamodel.py  migration.py  sisenseclient.py  utils.py  wellcheck.py
pysisense/access_management/: __init__.py  admin.py  columns.py  groups.py  ownership.py  users.py
pysisense/blox/: __init__.py  core.py
pysisense/custom_code/: __init__.py  core.py
pysisense/dashboard/: __init__.py  columns.py  core.py  scripts.py  shares.py
pysisense/datamodel/: __init__.py  build.py  connections.py  core.py  data.py  security.py  shares.py
pysisense/encryption/: __init__.py  core.py
pysisense/folder/: __init__.py  core.py
pysisense/mergetool/: __init__.py  custom_code.py  folder.py
pysisense/metadata/: __init__.py  core.py
pysisense/migration/: __init__.py  base.py  custom_code.py  dashboards.py  datamodels.py  groups.py  users.py
pysisense/plugins/: __init__.py  core.py  snapshots.py
pysisense/queries/: __init__.py  core.py
pysisense/wellcheck/: __init__.py  dashboard_checks.py  datamodel_checks.py
tests/: test_dashboard.py
tests/integration/access_management/: access_management_int_test.py
tests/integration/blox/: blox_int_test.py  blox_windows_int_test.py
tests/integration/dashboard/: dashboard_int_test.py
tests/integration/datamodel/: datamodel_int_test.py
tests/integration/wellcheck/: check_dashboard_structure_int_test.py  check_dashboard_widget_counts_int_test.py
tests/unit/: helpers.py  test_access_management.py  test_blox.py  test_custom_code.py  test_dashboard.py  test_datamodel.py  test_encryption.py  test_folder.py  test_metadata.py  test_migration.py  test_operating_system.py  test_plugins.py  test_queries.py  test_sisenseclient.py  test_utils.py  unit_test_wellcheck.py
tools/: check_docstrings.py
win2linux-merge-tool/win2linux-merge-tool/: .env.example  MigrationReportClass.py  README.md  RELEASE_NOTES.md  RELEASE_NOTES_v4.0.0.md  RELEASE_NOTES_v4.3.0.md  RELEASE_NOTES_v4.3.1.md  RELEASE_NOTES_v4.3.2.md  RELEASE_NOTES_v5.0.0.md  RELEASE_NOTES_v5.0.1.md  RELEASE_NOTES_v6.0.0.md  RELEASE_NOTES_v6.0.1.md  SisenseRESTAPIClientClass.py  USER_MANUAL.md  build-macos.sh  build-web-macos.spec  build-web-windows.spec  config_loader.py  input_data.json  output_data.json  requirements.txt  server.py  set-app-icon.sh  sisense_migration_and_merge_tool.py  sisense_widget_JAQL_status_checker.py  test_notebook_update_permissions.py  validation_fetch_standalone.py  validation_run_standalone.py
win2linux-merge-tool/win2linux-merge-tool/assets/: icon.icns
win2linux-merge-tool/win2linux-merge-tool/docs/: JAQL_validation_vs_UI.md
win2linux-merge-tool/win2linux-merge-tool/frontend/: app.py  config.py  dialogs.py  index.html  main_window.py  migration_output.html  style.css  utils.py  widgets.py
win2linux-merge-tool/win2linux-merge-tool/frontend/chat/: README.md  index.html  package-lock.json  package.json  vite.config.ts
win2linux-merge-tool/win2linux-merge-tool/frontend/chat/src/: App.tsx  index.css
win2linux-merge-tool/win2linux-merge-tool/migration/: dashboards_migration.py  folders_migration.py  preflight.py
win2linux-merge-tool/win2linux-merge-tool/migration_mcp/: __init__.py  __main__.py  server.py
win2linux-merge-tool/win2linux-merge-tool/utils/: api_clients.py  logger_setup.py  mapping_utilities.py  progress_reporter.py  utils.py
